Fix bug on tablet test

--- a/src/components/responsive/responsive.css
+++ b/src/components/responsive/responsive.css
@@ -140,8 +140,8 @@
 @media all and (max-width: 1099px) and (max-height: 676px) {
   
   body, .mbua-wrapper {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
   }
   body img.mbua-slider-img {
     height: 600px;
